<<<<<<< HEAD
2016-11-24 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
      * DESCRIPTION: (Version, Date): 1.9-3
      * DESCRIPTION: new description, and change http to https in URL

2016-9-4 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
      * DESCRIPTION: add BugReports and change LICENSE to GPL >=3, fix Vincent's name (spelling error, sorry Vincent!)
=======
2016-9-2 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
      * DESCRIPTION: add BugReports and change LICENSE to GPL >=3
>>>>>>> parent of 10648fa... Doc fix Vincent's name

2016-8-21 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.9-1
   * NAMESPACE: import show from methods


2015-7-7 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.8-6
   * NAMESPACE: import more from base packages (new R rules)

2015-5-3 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.8-5
   * R/bayesglm: fix a missing line in the re-factorization of bayesglm.fit, when scaled=TRUE, and a column of X takes on more than two values, than prior.scale = prior.scale /(sd(x)*2).

2015-4-7 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.8-4
   * R/sigma.hat: sigma.hat changed to S3 function.
   * R/fitted: changed to S3 function
   * R/coef: coef, fixef, ranef, changed to S3 function


2015-3-31 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.8-03
   * R/bayesglm: revert back to a more straightforward coding, easier for debugging.
   * R/bayespolr: check n.iter to maxit, and pass it through control.


2014-8-27 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.7-07
   * R/readColumns: add read.columns()
   * R/sim: fix a bug in the name calling of beta.hat
   * man/readColumns: add description for read.columns()
   * NAMESPACE: export read.columns
   * DESCRIPTION: remove foreign and R2WinBUGS from suggests



2014-8-1 Yu-Sung Su     <suyusung@tsinghua.edu.cn>